--- a/tools/docker/production/Dockerfile.api
+++ b/tools/docker/production/Dockerfile.api
@@ -1,4 +1,4 @@
-FROM golang:1.19-bullseye
+FROM golang:1.22-alpine
 
 WORKDIR /backend
 
@@ -12,8 +12,8 @@ ADD https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.s
 RUN chmod +x /opt/bin/wait-for-it.sh
 RUN apt-get update
 RUN apt-get install dos2unix
-RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
-RUN go install github.com/swaggo/swag/cmd/swag@latest
+RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@v4.18.2
+RUN go install github.com/swaggo/swag/cmd/swag@v1.16.2
 
 # Copy application files
 RUN mkdir tools
