--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,12 @@ services:
   api:
     container_name: task_manager_api
     image: robson022/task_manager_api:${DOCKER_IMAGE_TAG}
+    env_file: .env
+    environment:
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_PORT=${DATABASE_PORT}
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
     ports:
       - "8000:8000"
     networks:
@@ -15,6 +21,7 @@ services:
   database:
     container_name: task_manager_database
     image: robson022/task_manager_database:${DOCKER_IMAGE_TAG}
+    env_file: .env
     ports:
       - "5432:5432"
     volumes:
@@ -31,6 +38,7 @@ services:
   redis:
     image: redis
     container_name: task_manager_redis
+    env_file: .env
     ports:
       - "6379:6379"
     volumes:
