--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: robson022/task_manager_api:${DOCKER_IMAGE_TAG}
     env_file: .env
     environment:
-      - DATABASE_HOST=${DATABASE_HOST}
-      - DATABASE_PORT=${DATABASE_PORT}
+      DATABASE_HOST: database
+      DATABASE_PORT: 5432
     ports:
       - "8000:8000"
     networks:
