--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     environment:
       DATABASE_HOST: database
       DATABASE_PORT: 5432
+      DATABASE_USER: task_manager
+      DATABASE_PASSWORD: 12345678
     ports:
       - "8000:8000"
     networks:
