--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     container_name: task_manager_database
     image: robson022/task_manager_database:${DOCKER_IMAGE_TAG}
     env_file: .env
+    environment:
+      POSTGRES_PASSWORD: 12345678
     ports:
       - "5432:5432"
     volumes:
