--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     environment:
       POSTGRES_USER: task_manager
       POSTGRES_PASSWORD: 12345678
-      POSTGRES_DB: task_manager
+      POSTGRES_DB: postgres
     ports:
       - "5432:5432"
     volumes:
