--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     env_file: .env
     ports:
       - "8000:8000"
+    restart: always
     networks:
       - task_manager_network
     depends_on:
@@ -19,6 +20,7 @@ services:
     env_file: .env
     ports:
       - "5432:5432"
+    restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -34,6 +36,7 @@ services:
     image: redis
     container_name: task_manager_redis
     env_file: .env
+    restart: always
     ports:
       - "6379:6379"
     volumes:
