--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,11 @@ services:
     container_name: task_manager_api
     image: robson022/task_manager_api:${DOCKER_IMAGE_TAG}
     env_file: .env
+    environment:
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_PORT=${DATABASE_PORT}
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
     ports:
       - "8000:8000"
     restart: always
@@ -19,6 +24,7 @@ services:
     image: robson022/task_manager_database:${DOCKER_IMAGE_TAG}
     env_file: .env
     environment:
+      - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
