--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - "5432:5432"
     restart: always
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./tools/database/init.sql:/var/lib/postgresql/data
     networks:
       - task_manager_network
     healthcheck:
@@ -48,7 +48,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - redis_data:/data
+      - ./tools/database/redis.conf:/data
     networks:
       - task_manager_network
     healthcheck:
