--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./tools/database/init.sql:/docker-entrypoint-initdb.d/init-database.sql:ro
+      - ./tools/database/init.sh:/docker-entrypoint-initdb.d/init-database.sql:ro
     networks:
       - task_manager_network
     healthcheck:
