--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -95,6 +95,8 @@ jobs:
             echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> .env
             echo "DATABASE_PORT=${{ secrets.DATABASE_PORT }}" >> .env
             echo "DATABASE_HOST=${{ secrets.DATABASE_HOST }}" >> .env
+            echo "SERVER_CASBIN_AUTH_MODEL=${{ secrets.SERVER_CASBIN_AUTH_MODEL }}" >> .env
+            echo "SERVER_CASBIN_AUTH_POLICY=${{ secrets.SERVER_CASBIN_AUTH_POLICY }}" >> .env
             # Login Docker
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
             # Pulling Images
