--- a/tools/docker/production/Dockerfile.api
+++ b/tools/docker/production/Dockerfile.api
@@ -33,4 +33,5 @@ RUN dos2unix ./src/api/app/start.sh
 # Copy application database migrations
 COPY tools/database ./tools/database
 
-CMD /opt/bin/wait-for-it.sh --timeout=20 $DATABASE_HOST:$DATABASE_PORT -- ./src/api/app/start.sh
+# Command to start the application
+CMD bash -c "/opt/bin/wait-for-it.sh --timeout=20 ${DATABASE_HOST}:${DATABASE_PORT} -- ./src/api/app/start.sh"
