--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,21 +85,8 @@ jobs:
             # Extract the tag on job build
             TAG=${{ needs.build.outputs.docker_tag }}
             # Create env file
-            [ -e .env ] && rm .env
             touch .env
-            echo  "DOCKER_IMAGE_TAG=$TAG" > .env
-            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-            echo "DATABASE_USER=${{ secrets.DATABASE_USER }}" >> .env
-            echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> .env
-            echo "DATABASE_PORT=${{ secrets.DATABASE_PORT }}" >> .env
-            echo "DATABASE_HOST=${{ secrets.DATABASE_HOST }}" >> .env
-            echo "SERVER_CASBIN_AUTH_MODEL=${{ secrets.SERVER_CASBIN_AUTH_MODEL }}" >> .env
-            echo "SERVER_CASBIN_AUTH_POLICY=${{ secrets.SERVER_CASBIN_AUTH_POLICY }}" >> .env
-            echo "DATABASE_NAME=${{ secrets.DATABASE_NAME }}" >> .env
-            echo "DATABASE_SSL_MODE=${{ secrets.DATABASE_SSL_MODE }}" >> .env
-            echo "DATABASE_SCHEMA=${{ secrets.DATABASE_SCHEMA }}" >> .env
-            echo "DATABASE_MIGRATIONS_PATH=${{ secrets.DATABASE_MIGRATIONS_PATH }}" >> .env
+            echo  "DOCKER_IMAGE_TAG=$TAG" >> .env
             # Login Docker
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
             # Pulling Images
